fixed spacing in navbar

--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -1173,7 +1173,7 @@ body {
 
 .logo {
 
-  margin-right: 80px;
+  margin-right: 70px;
 }
 
 /* SMALL GAP between login/signup/profile */
